Feb 5 registration